################################################################################
#
# CMake File for MPACT
#
# Description: Just moves CMake to the next directory down.
#
# Author: Brendan Kochunas
#   Date: 04/22/2011
#
################################################################################
ADD_SUBDIRECTORY(exampleTAU_Stubs)
